--- a/css/index.css
+++ b/css/index.css
@@ -131,10 +131,19 @@ table {
 }
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 html,
 body {
   font-family: 'Roboto', sans-serif;
+}
+body {
+  opacity: 1;
+  transition: 0.7s opacity;
+}
+body.fade {
+  opacity: 0;
+  transition: none;
 }
 h1,
 h2,
@@ -177,6 +186,7 @@ img {
 .main-navigation {
   width: 100%;
   height: 90px;
+  z-index: 99;
   background: #FFFFFF;
   border-bottom: 2px dashed #C0C0C0;
   position: fixed;
@@ -349,4 +359,13 @@ img {
 .home .content-pick .destination .btn:hover {
   background: #FFFFFF;
   color: #17A2B8;
+}
+.img-dest {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: 0.5s all ease-in-out;
+}
+.img-appear {
+  opacity: 1;
+  transform: translateY(0px);
 }
