--- a/less/global.less
+++ b/less/global.less
@@ -4,10 +4,21 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 html, body {
   font-family: 'Roboto', sans-serif;
+}
+
+body {
+  opacity: 1;
+  transition: 0.7s opacity;
+}
+
+body.fade {
+    opacity: 0;
+    transition: none;
 }
 
 h1, h2, h3, h4, h5 {
