--- a/less/home-page.less
+++ b/less/home-page.less
@@ -112,3 +112,15 @@
     }
   }
 }// home
+
+
+.img-dest {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: 0.5s all ease-in-out;
+}
+
+.img-appear {
+  opacity: 1;
+  transform: translateY(0px);
+}
