--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,7 @@
 .main-navigation {
   width: 100%;
   height: 90px;
+  z-index: 99;
   background: @main-bg;
   border-bottom: 2px dashed @navigation-border;
   position: fixed;
